# PTMTorrent

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  HFTorrent Data Schema.json:Zone.Identifier  LICENSE  Modelzoo.ipynb  Modelzoo.py  README.md  pyproject.toml  pyth_models_metadata.json  requirements.txt  schema.json
.github/workflows/: release.yml
HFTorrent/: README.md
HFTorrent/scripts/: 0_setupScripts.bash  1_setupHFTorrent.bash  2_downloadUserList.bash  3_downloadOrganizationPages.py  4_callAPIs.bash  4_getModelMetadata.bash  4a_getModelMetadata.py  5_createFullSetUserList.py  6a_gitCloneModels.py  a_huggingFaceLogin.bash  bare2full.bash  nuke.bash  requirements.txt  run.bash  test.py
HFTorrent/v2/: 3_getModelMetadata.bash  3a_getModelMetadata.py  mhObject.py  schemaObject.py
HFTorrent/v3/: 3a_getModelMetadata.py  ptmSchema.py
MHTorrent/: .gitignore  README.md
MHTorrent/scripts/: 0_env.bash  1_init.bash  util.py
MZTorrent/scripts/: 1_setupMZTorrent.bash  2_downloadModelPage.bash  2_downloadModelPage.py  3_getModelMetadata.bash  3_getModelMetadata.py  4_gitCloneModels.bash  4_gitCloneModels.py  git_links  model_links  nuke.bash  run.bash
ModelhubTorrent/: .gitignore  README.md
ModelhubTorrent/scripts/: 1_init.bash  1a_init.py  9_baretofull.sh  model.py  model_types.py  nuke.bash  run.bash
OMTorrent/scripts/: 1_clone_onnx_model_zoo.sh  2_metadata_parsing.sh  3_make_bare.sh  README.md  clean_up.sh  handle_manual.sh  metadata_parsing.py  run.sh
PHTorrent/: PHTorrent.schema.json  README.md
PHTorrent/scripts/: 0_setup.bash  1a_getList.py  2_parseList.bash  2a_parseList.py  nuke.bash  requirements.txt  run.bash
example/: README.md  commits_loc.json  example.py  onnxmodelzoo.json  requirements.txt  run.bash
globus-docs/: README.md
ptm_torrent/: README.md  __init__.py
(+126 files in other folders)
