[tool.poetry]
name = "ptm-torrent"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "ptm_torrent"}]

[tool.poetry.dependencies]
python = "^3.10"
progress = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
