[tool.poetry]
name = "ptm-torrent"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "ptm_torrent"}]

[tool.poetry.dependencies]
python = "^3.10"
progress = "^1.6"
requests = "^2.28.2"
pandas = "^1.5.2"
bs4 = "^0.0.1"
mistletoe = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
